@@ -46,7 +46,6 @@ public class LogMinerStreamingChangeEventSourceMetrics
 
     private static final Logger LOGGER = LoggerFactory.getLogger(LogMinerStreamingChangeEventSourceMetrics.class);
 
-    private static final long MILLIS_PER_SECOND = 1000L;
     private static final int TRANSACTION_ID_SET_SIZE = 10;
 
     private final OracleConnectorConfig connectorConfig;
@@ -66,14 +65,11 @@ public class LogMinerStreamingChangeEventSourceMetrics
     private final AtomicReference<String[]> redoLogStatuses = new AtomicReference<>(new String[0]);
     private final AtomicReference<ZoneOffset> databaseZoneOffset = new AtomicReference<>(ZoneOffset.UTC);
 
-    private final AtomicInteger batchSize = new AtomicInteger();
     private final AtomicInteger logSwitchCount = new AtomicInteger();
     private final AtomicInteger logMinerQueryCount = new AtomicInteger();
     private final AtomicInteger jdbcRows = new AtomicInteger();
 
-    private final AtomicLong sleepTime = new AtomicLong();
-    private final AtomicLong minimumLogsMined = new AtomicLong();
-    private final AtomicLong maximumLogsMined = new AtomicLong();
+    private final LongHistogramMetric minedLogsCount = new LongHistogramMetric();
     private final AtomicLong maxBatchProcessingThroughput = new AtomicLong();
     private final AtomicLong timeDifference = new AtomicLong();
     private final AtomicLong processedRowsCount = new AtomicLong();
@@ -94,8 +90,8 @@ public class LogMinerStreamingChangeEventSourceMetrics
     private final DurationHistogramMetric parseTimeDuration = new DurationHistogramMetric();
     private final DurationHistogramMetric resultSetNextDuration = new DurationHistogramMetric();
 
-    private final MaxLongValueMetric userGlobalAreaMemory = new MaxLongValueMetric();
-    private final MaxLongValueMetric processGlobalAreaMemory = new MaxLongValueMetric();
+    private final LongHistogramMetric userGlobalAreaMemory = new LongHistogramMetric();
+    private final LongHistogramMetric processGlobalAreaMemory = new LongHistogramMetric();
 
     private final LRUSet<String> abandonedTransactionIds = new LRUSet<>(TRANSACTION_ID_SET_SIZE);
     private final LRUSet<String> rolledBackTransactionIds = new LRUSet<>(TRANSACTION_ID_SET_SIZE);
@@ -116,8 +112,6 @@ public class LogMinerStreamingChangeEventSourceMetrics
                                                      CapturedTablesSupplier capturedTablesSupplier) {
         super(taskContext, changeEventQueueMetrics, metadataProvider, capturedTablesSupplier);
         this.connectorConfig = connectorConfig;
-        this.batchSize.set(connectorConfig.getLogMiningBatchSizeDefault());
-        this.sleepTime.set(connectorConfig.getLogMiningSleepTimeDefault().toMillis());
         this.clock = clock;
         this.startTime = clock.instant();
         this.batchMetrics = new BatchMetrics(this);
@@ -151,6 +145,7 @@ public class LogMinerStreamingChangeEventSourceMetrics
 
         abandonedTransactionIds.reset();
         rolledBackTransactionIds.reset();
+        minedLogsCount.reset();
 
         oldestScnTime.set(null);
     }
@@ -158,11 +153,6 @@ public class LogMinerStreamingChangeEventSourceMetrics
     @Override
     public long getMillisecondsToKeepTransactionsInBuffer() {
         return connectorConfig.getLogMiningTransactionRetention().toMillis();
-    }
-
-    @Override
-    public long getSleepTimeInMilliseconds() {
-        return sleepTime.get();
     }
 
     @Override
@@ -204,18 +194,18 @@ public class LogMinerStreamingChangeEventSourceMetrics
     }
 
     @Override
-    public int getBatchSize() {
-        return batchSize.get();
-    }
-
-    @Override
     public long getMinimumMinedLogCount() {
-        return minimumLogsMined.get();
+        return minedLogsCount.getMin();
     }
 
     @Override
     public long getMaximumMinedLogCount() {
-        return maximumLogsMined.get();
+        return minedLogsCount.getMax();
+    }
+
+    @Override
+    public long getCurrentMinedLogCount() {
+        return minedLogsCount.getValue();
     }
 
     @Override
@@ -450,24 +440,6 @@ public class LogMinerStreamingChangeEventSourceMetrics
     }
 
     /**
-     * Set the currently used batch size for querying LogMiner.
-     *
-     * @param batchSize batch size used for querying LogMiner
-     */
-    public void setBatchSize(int batchSize) {
-        this.batchSize.set(batchSize);
-    }
-
-    /**
-     * Set the connector's currently used sleep/pause time between LogMiner queries.
-     *
-     * @param sleepTime sleep time between LogMiner queries
-     */
-    public void setSleepTime(long sleepTime) {
-        this.sleepTime.set(sleepTime);
-    }
-
-    /**
      * Set the current system change number from the database.
      *
      * @param currentScn database current system change number
@@ -522,15 +494,7 @@ public class LogMinerStreamingChangeEventSourceMetrics
      */
     public void setMinedLogFileNames(Set<String> minedLogFileNames) {
         this.minedLogFileNames.set(minedLogFileNames.toArray(String[]::new));
-        if (minedLogFileNames.size() < minimumLogsMined.get()) {
-            minimumLogsMined.set(minedLogFileNames.size());
-        }
-        else if (minimumLogsMined.get() == 0) {
-            minimumLogsMined.set(minedLogFileNames.size());
-        }
-        if (minedLogFileNames.size() > maximumLogsMined.get()) {
-            maximumLogsMined.set(minedLogFileNames.size());
-        }
+        this.minedLogsCount.setValueAndCalculate(minedLogFileNames.size());
     }
 
     /**
@@ -816,12 +780,9 @@ public class LogMinerStreamingChangeEventSourceMetrics
                 ", currentLogFileNames=" + Arrays.asList(currentLogFileNames.get()) +
                 ", redoLogStatuses=" + Arrays.asList(redoLogStatuses.get()) +
                 ", databaseZoneOffset=" + databaseZoneOffset +
-                ", batchSize=" + batchSize +
                 ", logSwitchCount=" + logSwitchCount +
                 ", logMinerQueryCount=" + logMinerQueryCount +
-                ", sleepTime=" + sleepTime +
-                ", minimumLogsMined=" + minimumLogsMined +
-                ", maximumLogsMined=" + maximumLogsMined +
+                ", minedLogsCount=" + minedLogsCount +
                 ", maxBatchProcessingThroughput=" + maxBatchProcessingThroughput +
                 ", timeDifference=" + timeDifference +
                 ", processedRowsCount=" + processedRowsCount +
@@ -918,28 +879,37 @@ public class LogMinerStreamingChangeEventSourceMetrics
     }
 
     /**
-     * Utility class for tracking the current and maximum long value.
+     * Utility class for tracking the current, minimum, and maximum long value.
      */
     @ThreadSafe
-    static class MaxLongValueMetric {
+    static class LongHistogramMetric {
 
-        private final AtomicLong value = new AtomicLong();
-        private final AtomicLong max = new AtomicLong();
+        private final AtomicLong value = new AtomicLong(0L);
+        private final AtomicLong max = new AtomicLong(-1L);
+        private final AtomicLong min = new AtomicLong(-1L);
 
         public void reset() {
             value.set(0L);
-            max.set(0L);
+            max.set(-1L);
+            min.set(-1L);
         }
 
-        public void setValueAndCalculateMax(long value) {
+        public void setValueAndCalculate(long value) {
             this.value.set(value);
-            if (max.get() < value) {
-                max.set(value);
-            }
+
+            setMin(value);
+            setMax(value);
         }
 
         public void setValue(long value) {
             this.value.set(value);
+        }
+
+        public void setMin(long min) {
+            final long minimumValue = this.min.get();
+            if (minimumValue == -1 || minimumValue > min) {
+                this.min.set(min);
+            }
         }
 
         public void setMax(long max) {
@@ -953,12 +923,18 @@ public class LogMinerStreamingChangeEventSourceMetrics
         }
 
         public long getMax() {
-            return max.get();
+            final long maximumValue = max.get();
+            return maximumValue == -1 ? 0 : maximumValue;
+        }
+
+        public long getMin() {
+            final long minimumValue = min.get();
+            return minimumValue == -1 ? 0 : minimumValue;
         }
 
         @Override
         public String toString() {
-            return String.format("{value=%d,max=%d}", value.get(), max.get());
+            return "{value=%d,min=%d,max=%d}".formatted(value.get(), min.get(), max.get());
         }
     }
 
